--- a/index.html
+++ b/index.html
@@ -7,51 +7,76 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link rel="stylesheet" href="css/global.min.css" />
-  <link rel="stylesheet" href="css/aos.min.css" />
   <link rel="stylesheet" href="css/swiper-bundle.min.css" />
   <link rel="stylesheet" href="css/index.min.css" />
   <style>
-    .swiper {
-      min-height: 740px;
+    .carousel {
+      position: relative;
     }
-
+    .swiper-wrapper{
+      min-height: 300px;
+      line-height: 300px;
+    }
     .swiper-slide img {
       width: 100%;
-      max-height: 720px;
+      max-height: 740px;
     }
 
     .swiper-pagination {
       display: flex;
       width: 100%;
       justify-content: center;
+      margin-top: 5px;
     }
 
     .swiper-pagination-bullets,
     .swiper-pagination-bullets.swiper-pagination-horizontal {
-      width: auto;
+      width: fit-content!important;
     }
 
     .swiper-pagination-bullet {
-      border: 1px solid #fff;
-      width: 10px;
-      height: 10px;
+      border: 1px solid #c7c7c7;
+      background-color: transparent;
+      width: 8px;
+      height: 8px;
       opacity: 1;
       margin: 0 3px;
     }
 
     .swiper-pagination-bullet-active {
       background-color: #fff;
+      border-color: #fff;
     }
 
     .swiper-button-next,
     .swiper-button-prev {
-      position: static;
+      position: static!important;;
+      height: auto;
+      width: 30px;
+    }
+
+    .swiper-button-prev:after,
+    .swiper-rtl .swiper-button-next:after {
+      content: url('data:image/svg+xml;utf8,<svg width="10" height="13" viewBox="0 0 10 13" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0.286023 7.03462L8.95386 12.8845C9.05389 12.952 9.17095 12.9915 9.29236 12.9988C9.41377 13.006 9.53492 12.9808 9.64267 12.9258C9.75042 12.8707 9.84067 12.788 9.90365 12.6866C9.96664 12.5851 9.99996 12.4688 10 12.3502V0.65042C10.0001 0.531782 9.96685 0.415385 9.90391 0.313844C9.84098 0.212302 9.75073 0.12949 9.64296 0.074381C9.53519 0.019272 9.414 -0.00603138 9.29253 0.00121319C9.17106 0.00845776 9.05394 0.0479739 8.95386 0.115479L0.286023 5.96538C0.197717 6.02546 0.125599 6.10544 0.0758019 6.19852C0.0260045 6.2916 0 6.39502 0 6.5C0 6.60498 0.0260045 6.7084 0.0758019 6.80148C0.125599 6.89456 0.197717 6.97454 0.286023 7.03462V7.03462Z" fill="white"/></svg>')!important;
       height: auto;
     }
-    .swiper-button-prev:after, .swiper-rtl .swiper-button-next:after{content: url('data:image/svg+xml;utf8,<svg width="10" height="13" viewBox="0 0 10 13" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0.286023 7.03462L8.95386 12.8845C9.05389 12.952 9.17095 12.9915 9.29236 12.9988C9.41377 13.006 9.53492 12.9808 9.64267 12.9258C9.75042 12.8707 9.84067 12.788 9.90365 12.6866C9.96664 12.5851 9.99996 12.4688 10 12.3502V0.65042C10.0001 0.531782 9.96685 0.415385 9.90391 0.313844C9.84098 0.212302 9.75073 0.12949 9.64296 0.074381C9.53519 0.019272 9.414 -0.00603138 9.29253 0.00121319C9.17106 0.00845776 9.05394 0.0479739 8.95386 0.115479L0.286023 5.96538C0.197717 6.02546 0.125599 6.10544 0.0758019 6.19852C0.0260045 6.2916 0 6.39502 0 6.5C0 6.60498 0.0260045 6.7084 0.0758019 6.80148C0.125599 6.89456 0.197717 6.97454 0.286023 7.03462V7.03462Z" fill="white"/></svg>');height: auto;}
-    .swiper-button-next:after, .swiper-rtl .swiper-button-prev:after{content: url('data:image/svg+xml;utf8,<svg width="10" height="13" viewBox="0 0 10 13" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M9.71398 5.96538L1.04614 0.115477C0.946112 0.0480033 0.829053 0.00849185 0.70764 0.00122107C0.586227 -0.00604972 0.465086 0.019197 0.357336 0.0742278C0.249586 0.129259 0.159332 0.211977 0.0963461 0.313425C0.0333602 0.414873 4.29002e-05 0.531186 1.83781e-06 0.649769L8.14978e-07 12.3496C-7.98365e-05 12.4682 0.0331485 12.5846 0.0960856 12.6862C0.159023 12.7877 0.249268 12.8705 0.35704 12.9256C0.464812 12.9807 0.586001 13.006 0.707472 12.9988C0.828943 12.9915 0.946065 12.952 1.04614 12.8845L9.71398 7.03462C9.80228 6.97454 9.8744 6.89456 9.9242 6.80148C9.974 6.7084 10 6.60498 10 6.5C10 6.39502 9.974 6.2916 9.9242 6.19852C9.8744 6.10544 9.80228 6.02546 9.71398 5.96538V5.96538Z" fill="white"/></svg>');height: auto;}
-    .swiper-button-next.swiper-button-disabled{content: url('data:image/svg+xml;utf8,<svg width="10" height="13" viewBox="0 0 10 13" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M9.43325 6.37914C9.43307 6.37902 9.4329 6.3789 9.43272 6.37878L0.766541 0.529991L9.43325 6.37914ZM9.43325 6.37914C9.45535 6.3943 9.47217 6.41354 9.48333 6.43439C9.49453 6.45533 9.5 6.47779 9.5 6.5C9.5 6.52221 9.49453 6.54467 9.48333 6.56561C9.47217 6.58646 9.45535 6.6057 9.43324 6.62087C9.43307 6.62098 9.4329 6.6211 9.43272 6.62122L0.76654 12.47L9.43325 6.37914ZM0.500001 12.3496L0.500001 12.3499C0.499984 12.3747 0.506868 12.3998 0.521071 12.4227C0.535348 12.4458 0.556888 12.4662 0.584679 12.4804C0.612557 12.4947 0.644814 12.5016 0.677705 12.4997C0.710539 12.4977 0.741209 12.4871 0.766435 12.4701L0.500001 12.3496ZM0.500001 12.3496L0.500002 0.649942C0.500011 0.62519 0.506914 0.600062 0.521133 0.577161C0.535424 0.554141 0.556971 0.533705 0.584755 0.519514C0.612629 0.505279 0.644875 0.498358 0.677751 0.500327C0.710568 0.502292 0.741222 0.512941 0.766436 0.529921L0.500001 12.3496Z" stroke="white"/></svg>');}
-    .swiper-button-prev.swiper-button-disabled{}
+
+    .swiper-button-next:after,
+    .swiper-rtl .swiper-button-prev:after {
+      content: url('data:image/svg+xml;utf8,<svg width="10" height="13" viewBox="0 0 10 13" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M9.71398 5.96538L1.04614 0.115477C0.946112 0.0480033 0.829053 0.00849185 0.70764 0.00122107C0.586227 -0.00604972 0.465086 0.019197 0.357336 0.0742278C0.249586 0.129259 0.159332 0.211977 0.0963461 0.313425C0.0333602 0.414873 4.29002e-05 0.531186 1.83781e-06 0.649769L8.14978e-07 12.3496C-7.98365e-05 12.4682 0.0331485 12.5846 0.0960856 12.6862C0.159023 12.7877 0.249268 12.8705 0.35704 12.9256C0.464812 12.9807 0.586001 13.006 0.707472 12.9988C0.828943 12.9915 0.946065 12.952 1.04614 12.8845L9.71398 7.03462C9.80228 6.97454 9.8744 6.89456 9.9242 6.80148C9.974 6.7084 10 6.60498 10 6.5C10 6.39502 9.974 6.2916 9.9242 6.19852C9.8744 6.10544 9.80228 6.02546 9.71398 5.96538V5.96538Z" fill="white"/></svg>')!important;
+      height: auto;
+    }
+
+    .swiper-button-next.swiper-button-disabled::after {
+      content: url('data:image/svg+xml;utf8,<svg width="10" height="13" viewBox="0 0 10 13" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0.500001 12.3496L0.500001 12.3499C0.499984 12.3747 0.506868 12.3998 0.521072 12.4227C0.535348 12.4458 0.556887 12.4662 0.584679 12.4804C0.612557 12.4947 0.644814 12.5016 0.677705 12.4997C0.710585 12.4977 0.741294 12.487 0.766538 12.47L9.43272 6.62122C9.4329 6.6211 9.43307 6.62099 9.43324 6.62087C9.45535 6.6057 9.47217 6.58646 9.48333 6.56561L9.92131 6.79993L9.48333 6.56561C9.49453 6.54467 9.5 6.52221 9.5 6.5C9.5 6.47779 9.49453 6.45533 9.48333 6.43439C9.47217 6.41354 9.45535 6.3943 9.43324 6.37913C9.43307 6.37902 9.4329 6.3789 9.43272 6.37878L0.76654 0.529991L0.500001 12.3496ZM0.500001 12.3496L0.500002 0.649942C0.500011 0.625191 0.506914 0.600061 0.521132 0.577163C0.535425 0.55414 0.556972 0.533704 0.584754 0.519515C0.612629 0.505279 0.644874 0.498358 0.677751 0.500326C0.710569 0.502292 0.741222 0.512941 0.766435 0.529921L0.500001 12.3496Z" stroke="white"/></svg>')!important;
+    }
+
+    .swiper-button-prev.swiper-button-disabled::after {
+      content: url('data:image/svg+xml;utf8,<svg width="10" height="13" viewBox="0 0 10 13" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0.566754 6.62086C0.566928 6.62098 0.567103 6.6211 0.567277 6.62122L9.23346 12.47L0.566754 6.62086ZM0.566754 6.62086C0.544646 6.6057 0.527826 6.58646 0.516672 6.56561C0.505467 6.54467 0.5 6.52221 0.5 6.5C0.5 6.47779 0.505467 6.45533 0.516672 6.43439C0.527827 6.41354 0.544647 6.3943 0.566758 6.37913C0.566931 6.37902 0.567104 6.3789 0.567277 6.37878L9.23346 0.529994L0.566754 6.62086ZM9.5 0.65042V0.65008C9.50002 0.625316 9.49313 0.600172 9.47893 0.577258C9.46465 0.554224 9.44311 0.533767 9.41532 0.519556C9.38744 0.505301 9.35519 0.498365 9.3223 0.500326C9.28946 0.502285 9.25879 0.512935 9.23357 0.529923L9.5 0.65042ZM9.5 0.65042V12.3501C9.49999 12.3748 9.49309 12.3999 9.47887 12.4228C9.46458 12.4459 9.44303 12.4663 9.41525 12.4805C9.38737 12.4947 9.35513 12.5016 9.32225 12.4997C9.28943 12.4977 9.25878 12.4871 9.23357 12.4701L9.5 0.65042Z" stroke="white"/></svg>')!important;
+    }
+    .swiper-lazy-preloader-white{
+      opacity: 0.5;
+    }
   </style>
 </head>
 
@@ -71,76 +96,34 @@
       </div>
     </div>
   </div> -->
-  <nav id="nav">
-    <input type="checkbox" id="toggle" class="input-toggler" />
-    <div class="sidebar-overlay"></div>
-    <label for="toggle" class="menu-toggler">
-      <span class="menu-toggler-line"></span>
-      <span class="menu-toggler-line"></span>
-      <span class="menu-toggler-line"></span>
-    </label>
-    <div class="sidebar">
-      <a class="nav-brand" href="index.html">Navbar</a>
-      <!-- navbar for pc  -->
-      <div class="forpc">
-        <ul class="menu">
-          <li>
-            <a class="menu-link" href="#">線上訂票</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">公館場次查詢</a></li>
-              <li><a class="dropdown-item" href="#">新竹場次查詢</a></li>
-            </ul>
-          </li>
-          <li>
-            <a class="menu-link" href="#">電影介紹</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">現正熱映</a></li>
-              <li><a class="dropdown-item" href="#">即將上映</a></li>
-            </ul>
-          </li>
-          <li><a class="menu-link -active" href="#">最新消息</a></li>
-          <li><a class="menu-link" href="#">業務專區</a></li>
-          <li><a class="menu-link" href="#">關於影城</a></li>
-        </ul>
-        <!-- isUser DEMO用 -->
-        <div class="user-account isUser">
-          <div class="user">
-            HELLO! Yick Shun <span class="material-icons"> person </span><span class="material-icons"> menu </span>
-          </div>
-          <div class="user-login">
-            <a href="">會員登入</a>
-          </div>
-          <div class="user-regist">
-            <a href="">加入會員</a>
-          </div>
-          <div class="account-sub">
-            <hr />
-            <a href="">訂票查詢與取消</a>
-            <a href="">編輯會員系統</a>
-            <a href="">會員優惠PLUS</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </nav>
+  <header></header>
   <div class="carousel">
     <div class="swiper s-swiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <img src="https://picsum.photos/g/1920/740?random=2" />
+          <a href="">
+            <img data-src="https://picsum.photos/g/1920/740?random=2" class="swiper-lazy"/>
+            <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+          </a>
         </div>
         <div class="swiper-slide">
-          <img src="https://picsum.photos/g/1920/740?random=2" />
+          <a href="">
+            <img data-src="https://picsum.photos/g/1920/740?random=2" class="swiper-lazy"/>
+            <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+          </a>       
         </div>
         <div class="swiper-slide">
-          <img src="https://picsum.photos/g/1920/740?random=2" />
-        </div>
+          <a href="">
+            <img data-src="https://picsum.photos/g/1920/740?random=2" class="swiper-lazy"/>
+            <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+          </a>     
+         </div>
       </div>
-      <div class="swiper-pagination">
-        <div class="swiper-button-prev"></div>
-        <div class="dot"></div>
-        <div class="swiper-button-next"></div>
-      </div>
+    </div>
+    <div class="swiper-pagination">
+      <div class="swiper-button-prev"></div>
+      <div class="dot"></div>
+      <div class="swiper-button-next"></div>
     </div>
   </div>
 
@@ -153,12 +136,13 @@
       <div class="content content-row">
         <div class="showing-list row-5">
           <div class="state s-font recommand">影城推薦</div>
-          <a href="">
+          <a href="movie-info.html">
             <div class="poster">
               <img src="https://fakeimg.pl/250x350/" alt="" />
             </div>
-            <div class="movie-title l-font mul-ellipsis-1">
-              劫命救護<span class="s-font ellipsis">AMBULANCE</span>
+            <div class="movie-title">
+              <p class="l-font ellipsis">劫命救護</p>
+              <span class="s-font ellipsis">AMBULANCE</span>
             </div>
             <div class="movie-level s-font y12">輔12級</div>
             <div class="s-font">上映日期 2022-03-25</div>
@@ -171,7 +155,8 @@
               <img src="https://fakeimg.pl/250x350/" alt="" />
             </div>
             <div class="movie-title l-font mul-ellipsis-1">
-              劫命救護<span class="s-font ellipsis">AMBULANCE</span>
+              <p class="l-font ellipsis">劫命救護</p>
+              <span class="s-font ellipsis">AMBULANCE</span>
             </div>
             <div class="movie-level s-font y15">輔15級</div>
             <div class="s-font">上映日期 2022-03-25</div>
@@ -184,7 +169,8 @@
               <img src="https://fakeimg.pl/250x350/" alt="" />
             </div>
             <div class="movie-title l-font mul-ellipsis-1">
-              劫命救護<span class="s-font ellipsis">AMBULANCE</span>
+              <p class="l-font ellipsis">劫命救護</p>
+              <span class="s-font ellipsis">AMBULANCE</span>
             </div>
             <div class="movie-level s-font yp">保護級</div>
             <div class="s-font">上映日期 2022-03-25</div>
@@ -196,7 +182,8 @@
               <img src="https://fakeimg.pl/250x350/" alt="" />
             </div>
             <div class="movie-title l-font mul-ellipsis-1">
-              劫命救護<span class="s-font ellipsis">AMBULANCE</span>
+              <p class="l-font ellipsis">劫命救護</p>
+              <span class="s-font ellipsis">AMBULANCE</span>
             </div>
             <div class="movie-level s-font yn">普通級</div>
             <div class="s-font">上映日期 2022-03-25</div>
@@ -208,7 +195,8 @@
               <img src="https://fakeimg.pl/250x350/" alt="" />
             </div>
             <div class="movie-title l-font mul-ellipsis-1">
-              劫命救護<span class="s-font ellipsis">AMBULANCE</span>
+              <p class="l-font ellipsis">劫命救護</p>
+              <span class="s-font ellipsis">AMBULANCE</span>
             </div>
             <div class="movie-level s-font R">限制級</div>
             <div class="s-font">上映日期 2022-03-25</div>
@@ -267,7 +255,9 @@
             <a href="#">
               <img src="https://fakeimg.pl/250x200/" />
               <div class="new-info">
-                <p class="l-font">看指定電影送限定海報看指定電影送限定海報看指定電影送限定海報看指定電影送限定海報</p>
+                <p class="l-font">
+                  看指定電影送限定海報看指定電影送限定海報看指定電影送限定海報看指定電影送限定海報
+                </p>
                 <p class="s-font">
                   訂票觀看蝙蝠俠電影，就能獲的限定套組海報，數量有限請手刀前往。訂票觀看蝙蝠俠電影，就能獲的限定套組海報，數量有限請手刀前往。訂票觀看蝙蝠俠電影，就能獲的限定套組海報，數量有限請手刀前往。訂票觀看蝙蝠俠電影，就能獲的限定套組海報，數量有限請手刀前往。
                 </p>
@@ -279,7 +269,9 @@
             <a href="#">
               <img src="https://fakeimg.pl/250x200/" />
               <div class="new-info">
-                <p class="l-font ">看指定電影送限定海報看指定電影送限定海報看指定電影送限定海報看指定電影送限定海報</p>
+                <p class="l-font">
+                  看指定電影送限定海報看指定電影送限定海報看指定電影送限定海報看指定電影送限定海報
+                </p>
                 <p class="s-font">
                   訂票觀看蝙蝠俠電影，就能獲的限定套組海報，數量有限請手刀前往。訂票觀看蝙蝠俠電影，就能獲的限定套組海報，數量有限請手刀前往。訂票觀看蝙蝠俠電影，就能獲的限定套組海報，數量有限請手刀前往。訂票觀看蝙蝠俠電影，就能獲的限定套組海報，數量有限請手刀前往。
                 </p>
@@ -292,35 +284,19 @@
       </div>
     </section>
   </div>
+  
   <footer>
-    <div>
-      <img src="https://fakeimg.pl/250x100/" />
-      <div>
-        <a href=""><img class="fb" src="image/svg/dashicons_facebook-alt.svg" /></a>
-        <a href=""><img class="ig" src="image/svg/simple-line-icons_social-instagram.svg" /></a>
-        <a href=""><img class="yt" src="image/svg/typcn_social-youtube.svg" /></a>
-        <a href=""><img class="email" src="image/svg/dashicons_email-alt.svg" /></a>
-        <div class="s-font">
-          公館百老匯影城 02-8663-6128 | 新竹百老匯影城 02-86636128
-        </div>
-        <div class="s-font">
-          Copyright© 2022 Broadway Cinemas All Rights Reserved.
-        </div>
-      </div>
-    </div>
+    <div class="footer"></div>
   </footer>
 
   <script src="js/jquery.min.js"></script>
-  <script src="js/aos.min.js"></script>
-  <script>
-    AOS.init({
-      mirror: false,
-    });
-  </script>
   <script src="js/swiper-bundle.min.js"></script>
   <script>
     const slideSwiper = new Swiper(".s-swiper", {
-      lazy: true,
+      lazy:{
+        loadPrevNext: true,
+      },
+      preloadImages: false,
       pagination: {
         el: ".dot",
         clickable: true,
@@ -338,6 +314,7 @@
     });
   </script>
   <script src="js/index.js"></script>
+
 </body>
 
 </html>
