--- a/movie-info.html
+++ b/movie-info.html
@@ -10,103 +10,10 @@
   <link rel="stylesheet" href="css/aos.min.css">
   <link rel="stylesheet" href="css/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/index.min.css">
-
-  <style>
-    .swiper-slide img {
-      width: 100%;
-    }
-  </style>
 </head>
 
 <body class="no-scroll">
-  <nav id="nav">
-    <input type="checkbox" id="toggle" class="input-toggler" />
-    <div class="sidebar-overlay"></div>
-    <label for="toggle" class="menu-toggler">
-      <span class="menu-toggler-line"></span>
-      <span class="menu-toggler-line"></span>
-      <span class="menu-toggler-line"></span>
-    </label>
-    <div class="sidebar">
-      <a class="nav-brand" href="index.html">Navbar</a>
-      <!-- navbar for pc  -->
-      <div class="forpc">
-        <ul class="menu">
-          <li>
-            <a class="menu-link" href="#">線上訂票</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">公館場次查詢</a></li>
-              <li><a class="dropdown-item" href="#">新竹場次查詢</a></li>
-            </ul>
-          </li>
-          <li>
-            <a class="menu-link" href="#">電影介紹</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">現正熱映</a></li>
-              <li><a class="dropdown-item" href="#">即將上映</a></li>
-            </ul>
-          </li>
-          <li><a class="menu-link" href="#">最新消息</a></li>
-          <li><a class="menu-link" href="#">業務專區</a></li>
-          <li><a class="menu-link" href="#">關於影城</a></li>
-        </ul>
-        <!-- isUser DEMO用 -->
-        <div class="user-account isUser">
-          <div class="user">HELLO! Yick Shun</div>
-          <div class="user-login">
-            <a href="">會員登入</a>
-          </div>
-          <div class="user-regist">
-            <a href="">加入會員</a>
-          </div>
-          <div class="account-sub">
-            <hr>
-            <a href="">訂票查詢與取消</a>
-            <a href="">編輯會員系統</a>
-            <a href="">會員優惠PLUS</a>
-          </div>
-        </div>
-      </div>
-      <!-- navbar for mobile  -->
-      <div class="formobile">
-        <!-- isUser DEMO用 -->
-        <div class="user-account isUser">
-          <div class="user">HELLO! Yick Shun</div>
-          <div class="user-login">
-            <a href="">會員登入</a>
-          </div>
-          <div class="user-regist">
-            <a href="">加入會員</a>
-          </div>
-          <div class="account-sub">
-            <hr>
-            <a href="">訂票查詢與取消</a>
-            <a href="">編輯會員系統</a>
-            <a href="">會員優惠PLUS</a>
-          </div>
-        </div>
-        <ul class="menu">
-          <li>
-            <a class="menu-link" href="#">線上訂票</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">公館場次查詢</a></li>
-              <li><a class="dropdown-item" href="#">新竹場次查詢</a></li>
-            </ul>
-          </li>
-          <li>
-            <a class="menu-link" href="#">電影介紹</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">現正熱映</a></li>
-              <li><a class="dropdown-item" href="#">即將上映</a></li>
-            </ul>
-          </li>
-          <li><a class="menu-link" href="#">最新消息</a></li>
-          <li><a class="menu-link" href="#">業務專區</a></li>
-          <li><a class="menu-link" href="#">關於影城</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+  <header></header>
   <div class="section-box">
     <section class="section">
       <div class="content content-row">
@@ -115,7 +22,9 @@
         </div>
         <div class="movie-item row-2-9">
           <div class="movie-level y12">護6級</div>
-          <div class="movie-title bigger-font">劫命救護<span>AMBULANCE</span></div>
+          <div class="movie-title"> 
+            <p class="l-font ellipsis">劫命救護</p>
+            <span class="s-font ellipsis">AMBULANCE</span></div>
           <div class="up-date">上映日期 2022-03-25</div>
           <div class="book-btn"><span class="material-icons"> featured_play_list </span>前往訂票</div>
           <div class="list-item">
@@ -128,7 +37,7 @@
         </div>
       </div>
       <div class="content">
-        <div class="primary-title bigger-font">電影介紹
+        <div class="primary-title l-font">電影介紹
         </div>
         <div>退伍美軍威爾·夏普急需妻子高達23.1萬美元的癌症手術費，走投無路之下去向自己久未聯繫的繼哥丹尼借錢，但身為職業銀行搶匪的丹尼拜託威爾參與他即將進行的洛杉磯市中心聯邦銀行的搶劫計劃（英語：Bank
           robbery），承諾威爾只要幫忙則會將所需金額分給他。猶豫不決的威爾為了妻子而勉強答應，跟隨丹尼以及他招攬的一群職業罪犯迅速攻佔整間銀行、劫持員工、將保險庫及所有財物洗劫一空。然而，一名年輕警察查克因打算約一名心儀的銀行女員工而不請自來，直接打亂一行人的安排，丹尼僅能開門讓他進銀行後將查克挾持。
@@ -146,21 +55,7 @@
 
   </div>
   <footer>
-    <div>
-      <img src="https://fakeimg.pl/250x100/" />
-      <div>
-        <a href=""><img src="image/svg/dashicons_facebook-alt.svg" /></a>
-        <a href=""><img src="image/svg/simple-line-icons_social-instagram.svg" /></a>
-        <a href=""><img src="image/svg/typcn_social-youtube.svg" /></a>
-        <a href=""><img src="image/svg/dashicons_email-alt.svg" /></a>
-        <div class="small-font">
-          公館百老匯影城 02-8663-6128 | 新竹百老匯影城 02-86636128
-        </div>
-        <div class="small-font">
-          Copyright© 2022 Broadway Cinemas All Rights Reserved.
-        </div>
-      </div>
-    </div>
+    <div class="footer"></div>
   </footer>
 
   <script src="js/jquery.min.js"></script>
