--- a/movie-info.html
+++ b/movie-info.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link rel="stylesheet" href="css/global.min.css">
-  <link rel="stylesheet" href="css/aos.min.css">
   <link rel="stylesheet" href="css/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/index.min.css">
 </head>
@@ -79,7 +78,7 @@
           <div class="movie-title"> 
             <p class="l-font ellipsis">劫命救護</p>
             <span class="s-font ellipsis">AMBULANCE</span></div>
-          <div class="up-date">上映日期 2022-03-25</div>
+          <div class="up-date s-font">上映日期 2022-03-25</div>
           <div class="book-btn"><span class="material-icons"> featured_play_list </span>前往訂票</div>
           <div class="list-item">
             <div>導演<span>麥可貝</span></div>
@@ -93,7 +92,7 @@
       <div class="content">
         <div class="primary-title l-font">電影介紹
         </div>
-        <div>退伍美軍威爾·夏普急需妻子高達23.1萬美元的癌症手術費，走投無路之下去向自己久未聯繫的繼哥丹尼借錢，但身為職業銀行搶匪的丹尼拜託威爾參與他即將進行的洛杉磯市中心聯邦銀行的搶劫計劃（英語：Bank
+        <div class="introduction">退伍美軍威爾·夏普急需妻子高達23.1萬美元的癌症手術費，走投無路之下去向自己久未聯繫的繼哥丹尼借錢，但身為職業銀行搶匪的丹尼拜託威爾參與他即將進行的洛杉磯市中心聯邦銀行的搶劫計劃（英語：Bank
           robbery），承諾威爾只要幫忙則會將所需金額分給他。猶豫不決的威爾為了妻子而勉強答應，跟隨丹尼以及他招攬的一群職業罪犯迅速攻佔整間銀行、劫持員工、將保險庫及所有財物洗劫一空。然而，一名年輕警察查克因打算約一名心儀的銀行女員工而不請自來，直接打亂一行人的安排，丹尼僅能開門讓他進銀行後將查克挾持。
         </div>
       </div>
@@ -113,7 +112,6 @@
   </footer>
 
   <script src="js/jquery.min.js"></script>
-  <script src="js/aos.min.js"></script>
   <script src="js/swiper-bundle.min.js"></script>
   <script src="js/index.js"></script>
 </body>
