--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
       position: relative;
     }
     .swiper-wrapper{
+      /* padding: 50px 0; */
+    }
+    .swiper-slide a{
+      display: inline-block;
       min-height: 300px;
-      line-height: 300px;
     }
     .swiper-slide img {
       width: 100%;
@@ -160,14 +163,14 @@ font-size: initial;
         <div class="modal-info">
           <form action="">
             <div class="info">
-              <label for="id">帳號（電子郵件信箱）</label>
-              <input type="text" id="id" placeholder="aaabbb@gmail.com">
+              <label for="loginid">帳號（電子郵件信箱）</label>
+              <input type="text" id="loginid" placeholder="aaabbb@gmail.com">
             </div>
             <div class="info">
-              <label for="password">登入密碼 <a href="" class="forgetpwd">
+              <label for="loginpassword">登入密碼 <a href="" class="forgetpwd">
                 <span class="material-icons">error</span> FORGOT PASSWORD</a></label>
-              <input type="password" id="password" placeholder="PASSWORD">
-              <label for="lockpwd" class="s-font container-checkbox lockpwd">
+              <input type="password" id="loginpassword" placeholder="PASSWORD">
+              <label for="lockpwd" class="xs-font container-checkbox lockpwd">
                 記住密碼
                 <input type="checkbox" name="lockpwd" id="lockpwd">
                 <span class="checkmark"></span>
@@ -185,7 +188,7 @@ font-size: initial;
             </div>
             <div class="info submmitbtn">
               <button>LOGIN</button>
-              <a href="#regist" class="s-font">尚未申請帳號！馬上註冊!</a>
+              <a href="#regist" class="xs-font">尚未申請帳號！馬上註冊!</a>
             </div>
           </form>
         </div>
@@ -195,36 +198,35 @@ font-size: initial;
      <!-- 註冊modal -->
      <div class="modal" id="regist">
       <div class="modal-content">
-        <p>WELCOME TO BROADWAY!</p>
+        <p>WELCOME TO BROADWAY!JOIN US!</p>
         <div class="modal-info">
           <form action="">
             <div class="info">
-              <label for="id">帳號（電子郵件信箱）</label>
-              <input type="text" id="id" placeholder="aaabbb@gmail.com">
+              <label for="registid">帳號（電子郵件信箱)<span class="required-icon">*</span></label>
+              <input type="text" id="registid" required="required" placeholder="aaabbb@gmail.com">
             </div>
             <div class="info">
-              <label for="password">登入密碼 <a href="" class="forgetpwd">
-                <span class="material-icons">error</span> FORGOT PASSWORD</a></label>
-              <input type="password" id="password" placeholder="PASSWORD">
-              <label for="lockpwd" class="s-font container-checkbox lockpwd">
-                記住密碼
-                <input type="checkbox" name="lockpwd" id="lockpwd">
+              <label for="phone">聯絡電話<span class="required-icon">*<span class="xs-font">將以此帳號作為日後訂單聯繫，請務必填寫正確</span></span></label>
+              <input type="number" id="phone" required="required" placeholder="091234567">
+            </div>
+            <div class="info">
+              <label for="setpwd">設定密碼<span class="required-icon">*</span></label>
+              <input type="password" id="passetpwdsword" required="required" placeholder="請輸入6-10位含大小寫英數字">
+            </div>
+            <div class="info">
+              <label for="confirmpwd">確認密碼<span class="required-icon">*</span></label>
+              <input type="password" id="confirmpwd" required="required" placeholder="請再次確認密碼">
+            </div>
+            <div class="info">
+              <label for="confirmrule" class="xs-font container-checkbox">
+                我同意 會員條款｜應用程式使用條款｜個人資料使用條款
+                <input type="checkbox" id="confirmrule" required="required">
                 <span class="checkmark"></span>
               </label>
             </div>
-            <div class="info safeverify">
-              <label for="">安全驗證</label>
-              <div>
-              <input type="text" placeholder=" 請輸入右方驗證碼">
-              <div class="imgsafe">
-                <img src="https://picsum.photos/g/150/40" alt="">
-                <a href=""><span class="material-icons">sync</span></a>
-              </div>
-            </div>
-            </div>
             <div class="info submmitbtn">
-              <button>LOGIN</button>
-              <a href="#regist" class="s-font">尚未申請帳號！馬上註冊!</a>
+              <button>REGISTER</button>
+              <a href="#login" class="xs-font">已有帳號！馬上登入</a>
             </div>
           </form>
         </div>
