--- a/movie-info.html
+++ b/movie-info.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link rel="stylesheet" href="css/global.min.css">
   <link rel="stylesheet" href="css/swiper-bundle.min.css">
-  <link rel="stylesheet" href="css/index.min.css">
+  <link rel="stylesheet" href="css/all.min.css">
 </head>
 
 <body class="no-scroll">
@@ -44,28 +44,107 @@
             <li><a class="menu-link" href="#">業務專區</a></li>
             <li><a class="menu-link" href="#">關於影城</a></li>
           </ul>
-          <!-- isUser DEMO用 -->
+          <!-- logined style user-account class add 'isUser'   -->
           <div class="user-account isUser">
             <div class="user">
-              HELLO! <span class="user-name">Yick Shun</span><span class="material-icons"> person </span><span class="material-icons"> menu </span>
+              HELLO! <span class="user-name">Yick</span><span class="material-icons"> person </span><span
+                class="material-icons"> menu </span>
             </div>
             <div class="account-sub">
               <hr />
               <a href="">訂票查詢與取消</a>
-              <a href="">編輯會員系統</a>
+              <a href="">會員資料</a>
               <a href="">會員優惠PLUS</a>
             </div>
             <div class="user-login">
-              <a href="">會員登入</a>
+              <a href="#login">會員登入</a>
             </div>
             <div class="user-regist">
-              <a href="">加入會員</a>
+              <a href="#regist">加入會員</a>
             </div>
-            
+  
           </div>
         </div>
       </div>
     </nav>
+    <!-- 登入modal -->
+    <div class="modal" id="login">
+      <div class="modal-content">
+        <p>WELCOME TO BROADWAY!</p>
+        <div class="modal-info">
+          <form action="">
+            <div class="info">
+              <label for="loginid">帳號（電子郵件信箱）</label>
+              <input type="text" id="loginid" placeholder="aaabbb@gmail.com">
+            </div>
+            <div class="info">
+              <label for="loginpassword">登入密碼 <a href="" class="forgetpwd">
+                  <span class="material-icons">error</span> FORGOT PASSWORD</a></label>
+              <input type="password" id="loginpassword" placeholder="PASSWORD">
+              <label for="lockpwd" class="xs-font container-checkbox lockpwd">
+                記住密碼
+                <input type="checkbox" name="lockpwd" id="lockpwd">
+                <span class="checkmark"></span>
+              </label>
+            </div>
+            <div class="info safeverify">
+              <label for="">安全驗證</label>
+              <div>
+                <input type="text" placeholder=" 請輸入右方驗證碼">
+                <div class="imgsafe">
+                  <img src="https://picsum.photos/g/150/40" alt="">
+                  <a href=""><span class="material-icons">sync</span></a>
+                </div>
+              </div>
+            </div>
+            <div class="info submmitbtn">
+              <button>LOGIN</button>
+              <a href="#regist" class="xs-font">尚未申請帳號！馬上註冊!</a>
+            </div>
+          </form>
+        </div>
+        <a href="#" class="close-modal"><span class="material-icons">close</span></a>
+      </div>
+    </div>
+    <!-- 註冊modal -->
+    <div class="modal" id="regist">
+      <div class="modal-content">
+        <p>WELCOME TO BROADWAY!JOIN US!</p>
+        <div class="modal-info">
+          <form action="">
+            <div class="info">
+              <label for="registid">帳號（電子郵件信箱)<span class="required-icon">*</span></label>
+              <input type="text" id="registid" required="required" placeholder="aaabbb@gmail.com">
+            </div>
+            <div class="info">
+              <label for="phone">聯絡電話<span class="required-icon">*<span
+                    class="xs-font">將以此帳號作為日後訂單聯繫，請務必填寫正確</span></span></label>
+              <input type="number" id="phone" required="required" placeholder="091234567">
+            </div>
+            <div class="info">
+              <label for="setpwd">設定密碼<span class="required-icon">*</span></label>
+              <input type="password" id="passetpwdsword" required="required" placeholder="請輸入6-10位含大小寫英數字">
+            </div>
+            <div class="info">
+              <label for="confirmpwd">確認密碼<span class="required-icon">*</span></label>
+              <input type="password" id="confirmpwd" required="required" placeholder="請再次確認密碼">
+            </div>
+            <div class="info">
+              <label for="confirmrule" class="xs-font container-checkbox">
+                我同意 會員條款｜應用程式使用條款｜個人資料使用條款
+                <input type="checkbox" id="confirmrule" required="required">
+                <span class="checkmark"></span>
+              </label>
+            </div>
+            <div class="info submmitbtn">
+              <button>REGISTER</button>
+              <a href="#login" class="xs-font">已有帳號！馬上登入</a>
+            </div>
+          </form>
+        </div>
+        <a href="#" class="close-modal"><span class="material-icons">close</span></a>
+      </div>
+    </div>
   </header>
   <div class="section-box">
     <section class="section">
