--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>document</title>
+  <title>BROADWAY CINEMAS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link rel="stylesheet" href="css/global.min.css" />
@@ -64,7 +64,7 @@
                 <li><a class="menu-link" href="#">業務專區</a></li>
                 <li><a class="menu-link" href="#">關於影城</a></li>
               </ul>
-              <!-- logined style user-account class add 'isUser'   -->
+          <!-- login/logout style user-account toggle class 'isUser'/none   -->
               <div class="user-account">
                 <div class="user">
                   HELLO! <span class="user-name">Yick</span><span class="material-icons"> person </span><span
