增加頁面，調整樣式

--- a/book-history.html
+++ b/book-history.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>BROADWAY CINEMAS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <link rel="stylesheet" href="css/global.min.css">
-  <link rel="stylesheet" href="css/swiper-bundle.min.css">
-  <link rel="stylesheet" href="css/all.min.css">
+  <link rel="stylesheet" href="css/global.min.css" />
+  <link rel="stylesheet" href="css/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="css/all.min.css" />
 </head>
 
 <body class="no-scroll">
@@ -45,7 +45,7 @@
             <li><a class="menu-link" href="#">關於影城</a></li>
           </ul>
           <!-- login/logout style user-account toggle class 'isUser'/none   -->
-          <div class="user-account isUser">
+          <div class="user-account">
             <div class="user">
               HELLO! <span class="user-name">Yick</span><span class="material-icons"> person </span><span
                 class="material-icons"> menu </span>
@@ -62,7 +62,7 @@
             <div class="user-regist">
               <a href="#regist">加入會員</a>
             </div>
-  
+
           </div>
         </div>
       </div>
@@ -146,55 +146,79 @@
       </div>
     </div>
   </header>
+
   <div class="section-box">
     <section class="section">
-      <div class="content content-row">
-        <div class="movie-item row-3">
-          <img src="https://fakeimg.pl/250x350/" alt="" />
+      <div class="content">
+        <div class="main-title l-font">
+          <div class="s-font">BOOKING HISTORY</div>
+          <div>訂票查詢與取消</div>
         </div>
-        <div class="movie-item row-7">
-          <div class="movie-level y12">護6級</div>
-          <div class="movie-title"> 
-            <p class="l-font ellipsis">劫命救護</p>
-            <span class="s-font ellipsis">AMBULANCE</span></div>
-          <div class="up-date s-font">上映日期 2022-03-25</div>
-          <div class="book-btn"><span class="material-icons"> featured_play_list </span>前往訂票</div>
-          <div class="list-item">
-            <div>導演<span>麥可貝</span></div>
-            <div class="list-2">演員<div><span class="mul-ellipsis-4">傑克葛倫霍、愛莎岡薩雷、葉海雅阿巴杜馬丁二世傑克葛倫霍傑克葛倫霍、愛莎岡薩雷</span></div>
+        <div class="tab">
+          <div class="tab-list"></div>
+        </div>
+        <div class="content-row booking-history">
+          <div class="row-left row-2">
+            <img src="https://fakeimg.pl/250x350/" alt="" />
+          </div>
+          <div class="row-right row-8">
+            <div class="ticket-no">取票序號<span>#123456789</span></div>
+            <div class="movie-title">
+              <p class="l-font ellipsis">劫命救護</p>
+              <span class="s-font ellipsis">AMBULANCE</span>
             </div>
-            <div>類型<span>動作、懸疑、驚悚、劇情</span></div>
-            <div>片長<span>136分鐘</span></div>
+            <div class="booking-list content-row">
+              <div class="row-6">
+                <div class="list"><label>觀看影城</label><span>台北公館百老匯</span></div>
+                <div class="list"><label>觀看時間</label><span>2022.08.08 星期一</span></div>
+                <div class="list"><label>電影場次</label><span>12:30 標準數位 | 第12聽</span></div>
+                <div class="list"><label>電影票種</label><span>全票x1,優待票x3,愛心票x1,優待票x3,愛心票x1,優待票x3,愛心票x1</span></div>
+                <div class="list"><label>影城座位</label><span>12-07,12-8,12-09,12-11,12-12</span></div>
+              </div>
+              <div class="row-4">
+                <div class="list"><label>票卷數量</label><span>共2張</span></div>
+                <div class="list"><label>付款金額</label><span>NT$660</span></div>
+                <div class="list"><label>訂單時間</label><span>2022.12.11 22:25:06</span></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="content-row booking-history">
+          <div class="row-left row-2">
+            <img src="https://fakeimg.pl/250x350/" alt="" />
+          </div>
+          <div class="row-right row-8">
+            <div class="ticket-no">取票序號<span>#123456789</span></div>
+            <div class="movie-title">
+              <p class="l-font ellipsis">劫命救護</p>
+              <span class="s-font ellipsis">AMBULANCE</span>
+            </div>
+            <div class="booking-list content-row">
+              <div class="row-6">
+                <div class="list"><label>觀看影城</label><span>台北公館百老匯</span></div>
+                <div class="list"><label>觀看時間</label><span>2022.08.08 星期一</span></div>
+                <div class="list"><label>電影場次</label><span>12:30 標準數位 | 第12聽</span></div>
+                <div class="list"><label>電影票種</label><span>全票x1,優待票x3,愛心票x1,優待票x3,愛心票x1,優待票x3,愛心票x1</span></div>
+                <div class="list"><label>影城座位</label><span>12-07,12-8,12-09,12-11,12-12</span></div>
+              </div>
+              <div class="row-4">
+                <div class="list"><label>票卷數量</label><span>共2張</span></div>
+                <div class="list"><label>付款金額</label><span>NT$660</span></div>
+                <div class="list"><label>訂單時間</label><span>2022.12.11 22:25:06</span></div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-      <div class="content">
-        <div class="primary-title l-font">電影介紹</div>
-        <div class="introduction">
-          <p>
-            退伍美軍威爾·夏普急需妻子高達23.1萬美元的癌症手術費，走投無路之下去向自己久未聯繫的繼哥丹尼借錢，但身為職業銀行搶匪的丹尼拜託威爾參與他即將進行的洛杉磯市中心聯邦銀行的搶劫計劃（英語：Bank
-            robbery），承諾威爾只要幫忙則會將所需金額分給他。猶豫不決的威爾為了妻子而勉強答應，跟隨丹尼以及他招攬的一群職業罪犯迅速攻佔整間銀行、劫持員工、將保險庫及所有財物洗劫一空。然而，一名年輕警察查克因打算約一名心儀的銀行女員工而不請自來，直接打亂一行人的安排，丹尼僅能開門讓他進銀行後將查克挾持。
-          </p>
-        </div>
-      </div>
-      <div class="trailer">
-        <div class="video-container">
-          <iframe width="854" height="480" src="https://www.youtube.com/embed/oscVV_ZGU8g" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-        </div>
-      </div>
     </section>
-
   </div>
+  <div class="gotop"><span class="material-icons">arrow_drop_up</span></div>
   <footer>
     <div class="footer"></div>
   </footer>
 
   <script src="js/jquery.min.js"></script>
-  <script src="js/swiper-bundle.min.js"></script>
   <script src="js/index.js"></script>
-</body>
 
+</body>
 </html>
