修正樣式及新增

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             <a href="#">
               <img src="https://fakeimg.pl/250x200/" />
               <div class="new-info">
-                <p class="l-font">
+                <p class="sub-title">
                   看指定電影送限定海報看指定電影送限定海報看指定電影送限定海報看指定電影送限定海報
                 </p>
                 <p class="s-font">
@@ -285,7 +285,7 @@
             <a href="#">
               <img src="https://fakeimg.pl/250x200/" />
               <div class="new-info">
-                <p class="l-font">
+                <p class="sub-title">
                   看指定電影送限定海報看指定電影送限定海報看指定電影送限定海報看指定電影送限定海報
                 </p>
                 <p class="s-font">
