--- a/news-info.html
+++ b/news-info.html
@@ -20,16 +20,16 @@
     <section class="section">
       <div class="content news-info">
         <div class="actions">
-          <div class="back actions-btn">回上頁列表</div>
+          <div class="actions-btn"><a href="news.html" class="back">回上頁列表</a></div>
           <p>2022.08.12</p>
         </div>
         <div class="content-row">
-          <div class="row-5">
+          <div class="row-5 row-left">
             <img src="https://fakeimg.pl/450x250/" alt="event-name" />
           </div>
-          <div class="row-5">
-            <div class="new-info">
-              <p>
+          <div class="row-5 row-right">
+            <div>
+              <p class="sub-title">
                 看指定電影送限定海報
               </p>
               <hr class="hr-line" />
