--- a/news.html
+++ b/news.html
@@ -24,11 +24,11 @@
           <div>影城活動</div>
         </div>
         <div class="content-row">
-          <a href="">
-          <div class="event row-3">
+          <div class="event row-3-1">
+            <a href="news-info.html ">
             <img src="https://fakeimg.pl/350x250/" alt="event-name" />
-            <div class="new-info">
-              <p>
+            <div>
+              <p class="sub-title">
                 看指定電影送限定海報
               </p>
               <hr class="hr-line"/>
@@ -36,12 +36,11 @@
             </div>
             </a>
           </div>
-          <div class="event row-3">
-                        <a href="">
-
+          <div class="event row-3-1">
+            <a href="">
             <img src="https://fakeimg.pl/350x250/" alt="event-name" />
-            <div class="new-info">
-              <p>
+            <div>
+              <p class="sub-title">
                 全台獨家 怪獸與鄧不力多的秘密 特別場
               </p>
               <hr class="hr-line" />
@@ -49,11 +48,11 @@
             </div>
             </a>
           </div>
-          <div class="event row-3">
+          <div class="event row-3-1">
             <a href="">
             <img src="https://fakeimg.pl/350x250/" alt="event-name" />
-            <div class="new-info">
-              <p>
+            <div>
+              <p class="sub-title">
                 張國榮系列電影 數位修復版百老匯限定上映
               </p>
               <hr class="hr-line" />
@@ -61,11 +60,11 @@
             </div>
             </a>
           </div>
-          <div class="event row-3">
+          <div class="event row-3-1">
             <a href="">
             <img src="https://fakeimg.pl/350x250/" alt="event-name" />
-            <div class="new-info">
-              <p>
+            <div>
+              <p class="sub-title">
                 張國榮系列電影 數位修復版百老匯限定上映
               </p>
               <hr class="hr-line" />
@@ -73,11 +72,11 @@
             </div>
             </a>
           </div>
-          <div class="event row-3">
+          <div class="event row-3-1">
             <a href="">
             <img src="https://fakeimg.pl/350x250/" alt="event-name" />
-            <div class="new-info">
-              <p>
+            <div>
+              <p class="sub-title">
                 限量電影套餐 百老匯限定發售
               </p>
               <hr class="hr-line" />
@@ -95,11 +94,11 @@
           <div>銀行優惠</div>
         </div>
         <div class="content-row">
-          <div class="event row-3">
+          <div class="event row-3-1">
             <a href="">
                 <img src="https://fakeimg.pl/350x250/" alt="event-name" />
-                <div class="new-info">
-                  <p>
+                <div>
+                  <p class="sub-title">
                     看指定電影送限定海報
                   </p>
                   <hr class="hr-line" />
@@ -107,11 +106,11 @@
                 </div>
             </a>
           </div>
-          <div class="event row-3">
+          <div class="event row-3-1">
             <a href="">
             <img src="https://fakeimg.pl/350x250/" alt="event-name" />
-            <div class="new-info">
-              <p>
+            <div>
+              <p class="sub-title">
                 全台獨家 怪獸與鄧不力多的秘密 特別場
               </p>
               <hr class="hr-line" />
@@ -119,11 +118,11 @@
             </div>
             </a>
           </div>
-          <div class="event row-3">
+          <div class="event row-3-1">
             <a href="">
             <img src="https://fakeimg.pl/350x250/" alt="event-name" />
-            <div class="new-info">
-              <p>
+            <div>
+              <p class="sub-title">
                 張國榮系列電影 數位修復版百老匯限定上映
               </p>
               <hr class="hr-line" />
