新增頁面 調整樣式

--- a/book-history.html
+++ b/book-history.html
@@ -24,10 +24,10 @@
           <div class="s-font">BOOKING HISTORY</div>
           <div>訂票查詢與取消</div>
         </div>
-        <div class="tab actions">
-          <div class="tab-list actions-btn active">尚未取票</div>
-          <button class="tab-list actions-btn">完成觀看</button>
-          <button class="tab-list actions-btn">已取消</button>
+        <div class="actions">
+          <div class="actions-btn tab-item active">尚未取票</div>
+          <div class="actions-btn tab-item">完成觀看</div>
+          <div class="actions-btn tab-item">已取消</div>
         </div>
         <div class="tab-content">
           <div class="content-row item">
